k3s-userapps/open-notebook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-notebook
  namespace: open-notebook
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: open-notebook
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: open-notebook
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-notebook
      containers:
        - name: open-notebook
          image: lfnovo/open_notebook:1.14.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8502
              name: http
            - containerPort: 5055
              name: api
          volumeMounts:
            - mountPath: /app/data
              name: data
          startupProbe:
            httpGet:
              path: /health
              port: 5055
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /health
              port: 5055
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8502
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
