k3s-userapps/open-notebook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-notebook
  namespace: open-notebook
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8502
    - name: api
      port: 5055
      targetPort: 5055
  selector:
    app.kubernetes.io/pod: open-notebook
  type: ClusterIP
